--- a/SRC/index.html
+++ b/SRC/index.html
@@ -56,7 +56,7 @@
         </a>
 
         <a
-          href="https://www.linkedin.com/in/jo%C3%A3o-pedro-maciel-pinheiro-578117258/"
+          href="https://www.linkedin.com/in/jpmp1998"
           target="_blank"
         >
           <ion-icon name="logo-linkedin"></ion-icon>
