--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My profile</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./SRC/style.css" />
   </head>
   <body>
     <div class="container">
@@ -80,6 +80,6 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <script src="./script.js"></script>
+    <script src="./SRC/script.js"></script>
   </body>
 </html>
