--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My profile</title>
-    <link rel="stylesheet" href="./SRC/script.js" />
+    <link rel="stylesheet" href="./SRC/style.css" />
   </head>
   <body>
     <div class="container">
