--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
       <div class="profile">
-        <img src="./img/profile/Slayer Gif 1.gif" alt="Goblin slayer" />
+        <img src="./SRC/img/profile/Slayer Gif 1.gif" alt="Goblin slayer" />
         <p>João pedro M pinheiro</p>
       </div>
       <div class="switch" onclick="toggleMode()">
