--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <ul>
         <li>
-          <a href="https://app.rocketseat.com.br/dashboard" target="_blank"
+          <a href="https://www.efset.org/cert/sZjJFG" target="_blank"
             >Education</a
           >
         </li>
