--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <ul>
         <li>
           <a href="https://www.efset.org/cert/sZjJFG" target="_blank"
-            >Education</a
+            >English test</a
           >
         </li>
 
