--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <li>
           <a
-            href="https://github.com/Pedro-maciel-pinheiro?tab=projects"
+            href="https://github.com/Pedro-maciel-pinheiro"
             target="_blank"
             >My projects</a
           >
